added steper page

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -16,6 +16,7 @@ $grey-color: #596380;
 $grey-color-drk: #6a7596;
 $grey-color-800:#E9E9EC;
 $green-color:#437c1b;
+$lt-grey:#575757;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
