--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1079,3 +1079,509 @@
         min-height: 300px;
     }
 }
+/** REwards style start **/
+.rewards-section {
+    padding: 70px 0;
+    @media #{$max-xl}{
+        padding: 60px 0;
+    }
+    @media #{$max-lg}{
+        padding: 50px 0;
+    }
+    ::placeholder{
+        transform: translateY(3px);
+    }
+    .left-space {
+        @media #{$max-xxxl}{
+            padding-left: 12px;
+            .ms-2{
+                margin-left: 0 !important;
+            }
+        }
+    }
+    .input-box {
+        position: relative;
+        .over-text {
+            position: absolute;
+            top: 10px;
+            right: 18px;
+        }
+        .form-control{
+            padding-right: 75px;
+            border: solid 1px #414042;
+            background-color: #212027;
+            border-radius: 30px;
+            color:#fff;
+        }
+    }
+    .content-card{
+        border-radius: 10px;
+        padding: 20px;
+    }
+    .icon-note {
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #f06700;
+        border-radius: 100%;
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .side-card {
+        background-color:$body-bg-800;
+        border-radius: 10px;
+        border: 1px solid #414042;
+        .side-card-lst{
+            padding: 0 10px;
+        }
+        .sid-card-header {
+            display: flex;
+            padding: 14px 10px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            align-items: center;
+            .imgae-wrap {
+                width: 35px;
+                margin-right: 10px;
+            }
+        }
+        .sid-card-footer{
+            padding: 14px 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .card-list-item {
+            display: flex;
+            align-items: center;
+            background-color: #000;
+            position: relative;
+            overflow: hidden;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            border: 1px solid #000;
+            .card-icon {
+                position: absolute;
+                width: 60px;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-bottom-left-radius: 8px;
+                border-top-left-radius: 8px;
+                .icon-wrap{
+                    max-width: 25px;
+                }
+            }
+            .card-content {
+                h2{
+                    span{
+                        font-size: 34px;
+                    }
+                }
+                width: calc(100% - 60px);
+                margin-left: auto;
+                padding: 8px 10px;
+            }
+            .hr{
+                background-color: #15141b;
+                height: 1px;
+                width: 100%;
+                margin-top: 5px;
+                margin-bottom: 5px;
+            }
+            span{
+                color:#fff;
+            }
+        }
+    }
+    
+}
+
+.icon-dott {
+    width: 30px;
+    height: 30px;
+    background-color: #f06700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .icon-ball {
+        width: 14px;
+        height: 14px;
+        border-radius: 100%;
+        background-color: #fff;
+    }
+    
+}
+.text-100 {
+    font-size: 14px;
+}
+.content-wrap{
+    padding: 0 !important;
+}
+.top-space-lg {
+    margin-top: 30px;
+}
+.box-alert{
+    border-radius:7px;
+    -webkit-border-radius:7px;
+    -o-border-radius:7px;
+    -ms-border-radius:7px;
+    -moz-border-radius:7px;
+    padding: 15px;
+    cursor: pointer;
+    background: $body-bg;
+    border:1px solid $lt-grey;
+}
+.box-alert:hover, .box-alert.box-active{
+    background: $black;
+    border:1px solid $lt-grey;
+    
+    .circle-box{
+        background: $primary;
+    }
+}
+.circle-box {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width: 57px;
+    height: 57px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -moz-border-radius: 50%;
+    text-align: center;
+    background:$primary;
+}
+.ft-14 {
+    font-size: 14px;
+}
+.top-btm-spacelg{
+    margin: 35px 0;
+}
+.link-color {
+    color: $primary;
+}
+.step-vertical {
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    @media #{$max-lg}{
+        margin-right: 0;
+        flex-direction: row;
+        padding-bottom: 40px;
+    }
+    .step-list {
+        position: relative;
+        text-align: right;
+        padding-bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 60px;
+        height: 100%;
+        min-height: 90px;
+        @media #{$max-lg}{
+            text-align: center;
+            padding-right: 0;
+            width: 100%;
+            min-height: auto;
+            padding-bottom: 30px;
+        }
+        &::before {
+            position: absolute;
+            content: '';
+            top: 0;
+            bottom: 0;
+            right: 19px;
+            left: auto;
+            width: 2px;
+            height: 100%;
+            background: $white;
+            @media #{$max-lg}{
+                top: auto;
+                right: 0;
+                left: 0;
+                width: 100%;
+                height: 2px;
+            }
+        }
+        &.active{
+            &::before {
+                background:$primary;
+            }
+            .step-blk {
+                background:$primary;
+                color: $white;
+                border-color: transparent;
+            }
+        }
+        &.completed{
+            .step-num{
+                display: none;
+            }
+            .step-blk {
+                background: $primary;
+                border-color: $primary;
+            }
+            .tick-img{
+                display: inline-block;
+            }
+        }
+        .tick-img{
+            display: none;
+        }
+        .step-float{
+            position: absolute;
+            top: 50%;
+            right: 0;
+            transform: translateY(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            @media #{$max-lg}{
+                top: auto;
+                left: 50%;
+                transform: translateX(-50%);
+                bottom: -15px;
+            }
+        }
+        p{
+            margin-bottom: 0;
+            transform: translateY(3px);
+            @media #{$small-mobile}{
+                font-weight: bold;
+                font-size: 12px;
+            }
+        }
+    }
+}
+.light-text {
+    color: $white;
+}
+.step-blk{
+    background: #000;
+    color: $primary;
+    border:1px solid $primary;
+    width: 38px;
+    height: 38px;
+    text-align: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -moz-border-radius: 50%;
+    vertical-align: middle;
+    line-height: 43px;
+    display: inline-block;
+    @media #{$max-xsm} {
+        width: 34px;
+        height: 34px;
+        line-height: 36px;
+    }
+}
+.form-grid {
+    margin-bottom: 30px;
+}
+.form-label {
+    color: $white;
+    font-weight: 600;
+}
+.file-wrap {
+    display: flex;
+    align-items: center;
+}
+.file-icons {
+    width: 40px;
+    height: 40px;
+    background: #fea500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    margin-right: 28px;
+}
+.file-wrap {
+    display: flex;
+    align-items: center;
+    .file-icons {
+        width: 40px;
+        height: 40px;
+        background: $primary;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+        margin-right: 28px;
+    }
+    .file-input {
+        width: 160px;
+        position: relative;
+        cursor: pointer;
+        max-width: 100%;
+        text-align: center;
+    }
+    .input-file {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        z-index: 99;
+    }
+}
+.progress-tab{
+    input.form-control{
+        background:$grey-color-800;
+        padding: 10px;
+        &::placeholder{
+            color:$grey-color-drk;
+            line-height:15px ;
+            
+        }
+    }
+}
+/** REwards style start **/
+
+/** Delegator grid style start **/
+.delegatorgrid-sec{
+    .user-icon{
+        width: 40px;
+        height: 40px;
+        line-height: 55px;
+    }
+    .user-icon:before{
+        width: 21px;
+        height: 21px;
+    }
+    .filter-sec{
+        margin-bottom: 35px;
+    }
+    .box-head{
+        padding: 20px;
+    }
+    .side-cover {
+        margin: 0 -25px;
+        @media #{$max-xxl} {
+            margin: 0 -15px;
+        }
+    }
+    .side-space{
+        padding: 0 25px;
+        margin: 0 0 40px;
+        @media #{$max-xxl} {
+            padding: 0 15px;
+            margin: 0 0 30px;
+        } 
+    }
+    
+}
+.cus-search {
+    border: 1px solid #414042;
+    padding: 15px 15px 9px 45px;
+    font-size: 14px;
+    border-radius: 30px;
+    background: $grey-color-800;
+    color:$white;
+    @media #{$max-xsm}{
+        font-size: 12px;
+        padding:10px 10px 10px 30px;
+    }
+    @media #{$max-xxsm}{
+        font-size: 10px;
+        padding: 8px 8px 8px 30px;
+    }
+    
+}
+.search-box  {
+    img{
+        position: absolute;
+        left: 20px;
+        top: 16px;
+        @media #{$max-xsm}{
+                left: 13px;
+                top: 13px;
+                max-width: 10px;
+        }
+        @media #{$max-xxsm}{
+            top: 10px;
+        }
+    }
+   
+}
+.search-box{
+    input::placeholder{
+        color:$grey-color-drk;
+    }
+}
+.search-box {
+    width: 44%;
+    @media #{$max-xxl} {
+        width: 40%;
+    }
+    @media #{$max-xl} {
+        width: 65%;
+    }
+}
+.w-search{
+    border-radius: 10px;
+    border: none;
+    background: #E9E9EC;
+    font-size: 16px;
+    color: #596380;
+    padding: 8px 25px;
+}
+.filter-sec{
+    .arrow.down {
+        position: absolute;
+        right: 20px;
+        left: auto;
+        bottom: auto;
+        top: 15px;
+        pointer-events: none;
+    }
+    .down {
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+      }
+      
+      .arrow {
+        border: solid $secondary;
+        border-width: 0 2px 2px 0;
+        display: inline-block;
+        padding: 3px;
+    }
+}
+.cus-dropdown{
+    .btn-primary:focus{
+        box-shadow: none !important;
+    }
+    .btn{
+        background: $grey-color-800;
+        color:$secondary;
+        padding: 10px 50px 10px 20px;
+        
+        &:focus{
+            box-shadow: none;
+        }
+        &:after{
+            content: none;
+        }
+    }
+}
+
+
+/** Delegator grid style end **/
