--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -4,6 +4,7 @@ $primary-gradient:linear-gradient(180deg, #F06500 0%, #F28B03 100%);
 $primary:#F06500;
 $primary-two:#f17d02;
 $primary-three:#F28B03;
+$lite-orange:#fff0d4;
 $white:#FFFFFF;
 $lite-grey-secondry:#EAEAE8;
 $body-text:#BBBBBE;
@@ -17,6 +18,10 @@ $grey-color-drk: #6a7596;
 $grey-color-800:#E9E9EC;
 $green-color:#437c1b;
 $lt-grey:#575757;
+$lt-green:#daf5c9;
+$lt-blue:#dce5fd;
+$ltdrk-orange:#f9d2bc;
+$lt-purple-50:#ecd5fd;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
