--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1079,7 +1079,7 @@
         min-height: 300px;
     }
 }
-/** REwards style start **/
+/** become a validator steps style start **/
 .rewards-section {
     padding: 70px 0;
     @media #{$max-xl}{
@@ -1454,14 +1454,14 @@
         }
     }
 }
-/** REwards style start **/
+/** become a validator step style end **/
 
 /** Delegator grid style start **/
 .delegatorgrid-sec{
     .user-icon{
         width: 40px;
         height: 40px;
-        line-height: 55px;
+        line-height: 50px;
     }
     .user-icon:before{
         width: 21px;
@@ -1550,16 +1550,19 @@
         right: 20px;
         left: auto;
         bottom: auto;
-        top: 15px;
+        top: 18px;
         pointer-events: none;
+        @media #{$max-xxl} {
+            top: 16px;
+        }
     }
-    .down {
+    .arrow.down {
         transform: rotate(45deg);
         -webkit-transform: rotate(45deg);
       }
       
       .arrow {
-        border: solid $secondary;
+        border: solid $body-bg;
         border-width: 0 2px 2px 0;
         display: inline-block;
         padding: 3px;
@@ -1571,7 +1574,7 @@
     }
     .btn{
         background: $grey-color-800;
-        color:$secondary;
+        color:$body-bg;
         padding: 10px 50px 10px 20px;
         
         &:focus{
@@ -1580,8 +1583,374 @@
         &:after{
             content: none;
         }
+        &:hover{
+            background: $grey-color-800;
+            color:$body-bg;
+        }
+    }
+}
+.view-blk{
+    border: 1px solid $white;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+    -o-border-radius: 9px;
+    -ms-border-radius: 9px;
+    -moz-border-radius: 9px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 15px;
+}
+.white-image{
+    display: none;
+}
+.view-blk.view-active{
+    border: 1px solid transparent;
+    background: $primary;
+}
+.view-blk.view-active{
+   .white-image{
+       display: inline-block;
+   }
+   .grey-image{
+       display: none;
+   }
+}
+.box{
+    background: $body-bg;
+    // box-shadow: 0px 10px 20px $grey-color;
+    // -webkit-box-shadow: 0px 10px 20px $grey-color;
+    // -o-box-shadow: 0px 10px 20px $grey-color;
+    // -ms-box-shadow: 0px 10px 20px $grey-color;
+    // -moz-box-shadow: 0px 10px 20px $grey-color;
+    padding: 2px 2.5px 2px 2px;
+    border: 1px solid #414042;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -moz-border-radius: 4px;
+    height: 100%;
+}
+.box-head {
+    background: $body-bg-800;
+    padding: 15px;
+    position: relative;
+}
+.box-body {
+    padding: 20px;
+}
+.user-icon {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    background: #f06700;
+    line-height: 28px;
+    margin-right: 15px;
+    &:before{
+        content: '';
+        width: 10px;
+        height: 10px;
+        background: $white;
+        display: inline-block;
+        border-radius: 50%;
+    }
+}
+.warning-color {
+    color: $primary;
+}
+.mob-filter{
+    @media #{$max-lg} {
+        top: 16px;
     }
 }
 
-
 /** Delegator grid style end **/
+
+/** rewards calculator style start **/
+.rewards-section-cal {
+    padding: 70px 0;
+    @media #{$max-xl}{
+        padding: 60px 0;
+    }
+    @media #{$max-lg}{
+        padding: 50px 0;
+    }
+    ::placeholder{
+        transform: translateY(3px);
+    }
+    .left-space {
+        @media #{$max-xxxl}{
+            padding-left: 12px;
+            .ms-2{
+                margin-left: 0 !important;
+            }
+        }
+    }
+    .input-box {
+        &::placeholder{
+            color:$grey-color-drk ;
+        }
+        position: relative;
+        .over-text {
+            position: absolute;
+            top: 7px;
+            right: 18px;
+        }
+        .form-control{
+            padding-right: 75px;
+            // border: solid 1px #414042;
+            // background-color: #212027;
+            // border-radius: 30px;
+            // color:#fff;
+        }
+    }
+    .content-card{
+        border-radius: 10px;
+        padding: 20px;
+        background: $white;
+        color: $body-bg;
+    }
+    .icon-note {
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #f06700;
+        border-radius: 100%;
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .side-card {
+        background-color:#000;
+        border-radius: 10px;
+        border: 1px solid #414042;
+        .side-card-lst{
+            padding: 0 10px;
+        }
+        .sid-card-header {
+            display: flex;
+            padding: 14px 10px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            align-items: center;
+            .imgae-wrap {
+                width: 35px;
+                margin-right: 10px;
+            }
+        }
+        .sid-card-footer{
+            padding: 14px 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .card-list-item {
+            display: flex;
+            align-items: center;
+            background-color: #000;
+            position: relative;
+            overflow: hidden;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            border: 1px solid #000;
+            .card-icon {
+                position: absolute;
+                width: 60px;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-bottom-left-radius: 8px;
+                border-top-left-radius: 8px;
+                .icon-wrap{
+                    max-width: 25px;
+                }
+            }
+            .card-content {
+                h2{
+                    span{
+                        font-size: 34px;
+                    }
+                }
+                width: calc(100% - 60px);
+                margin-left: auto;
+                padding: 8px 10px;
+            }
+            .hr{
+                background-color: #15141b;
+                height: 1px;
+                width: 100%;
+                margin-top: 5px;
+                margin-bottom: 5px;
+            }
+            span{
+                color:#fff;
+            }
+        }
+    }
+    
+}
+
+.icon-dott {
+    width: 30px;
+    height: 30px;
+    background-color: $primary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .icon-ball {
+        width: 14px;
+        height: 14px;
+        border-radius: 100%;
+        background-color: #fff;
+    }
+    
+}
+.text-100 {
+    font-size: 14px;
+}
+.content-wrap{
+    padding: 0 !important;
+}
+.sec-spc-low {
+    padding: 40px 40px 30px;
+}
+.low-radius {
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -o-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -moz-border-radius: 12px;
+}
+.image-section {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.stat{
+    overflow: hidden;
+    .align{
+        font-size: 18px;
+        @media #{$max-sm} {
+            font-size: 16px;
+        }
+    }
+}
+.rt-border {
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    @media #{$max-sm} {
+        border:none;
+    }
+}
+.align{
+    transform: translateY(2px);
+    -webkit-transform: translateY(2px);
+    -o-transform: translateY(2px);
+    -ms-transform: translateY(2px);
+    -moz-transform: translateY(2px);
+}
+.progresbar-wrap {
+    padding-bottom: 48px;
+}
+.progresbar-wrap .prog-group {
+    position: relative;
+}
+.progresbar-wrap{
+    padding-bottom: 48px;
+    .prog-group {
+        position: relative;
+        .prog-label {
+            background-color: #f06700;
+            padding: 4px 12px 1px;
+            border-radius: 30px;
+            position: absolute;
+            bottom:-48px;
+            font-weight: bold;
+            color: #fff;
+            text-align: center;
+            &::before {
+                content: '';
+                position: absolute;
+                top: -10px;
+                left: 50%;
+                border-left: 10px solid transparent;
+                border-right: 10px solid transparent;
+                border-bottom: 10px solid #f06700;
+                transform: translateX(-50%);
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                top:-30px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 15px;
+                height: 15px;
+                border-radius: 100%;
+                background: #f06700;
+                z-index: 1;
+            }
+        }
+        .progress{
+            position: relative;
+            height: 8px;
+            background-color: #fff0d4;
+        }
+        .progress-bar {
+            background-color: #f06700;
+            border-radius: 30px;
+            
+        }
+    }
+}
+.content-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    min-height: auto;
+    padding: 40px 0;
+    flex-direction: column;
+}
+.dark-text {
+    color: $body-bg;
+}
+.sid-card-header, .sid-card-footer{
+    background: $primary;
+}
+.lightbg {
+    background-color: $lite-orange;
+}
+.side-card-lst{
+background: $body-bg;
+}
+.green-50 {
+    background-color: $lt-green;
+}
+.blue-50 {
+    background-color: $lt-blue ;
+}
+.shades-50 {
+    background-color: $ltdrk-orange;
+}
+.purple-50 {
+    background-color: $lt-purple-50 ;
+}
+.side-card-lst{
+    .trs-3{
+        @media #{$max-lg} {
+            font-size: 30px;
+        }
+        @media #{$max-sm} {
+            font-size: 28px;
+        }
+    }
+}
+/**rewards calculator style end **/
