--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -252,6 +252,7 @@ ul {
     background-color: var(--bs-btn-hover-bg);
     border-color: var(--bs-btn-hover-border-color);
 }
+
 .btn{
     border-radius: 10px;
     font-weight: 500;
@@ -272,6 +273,7 @@ ul {
         font-size: 14px;
     }
 }
+
 .primary-btn{
     background:$primary-gradient;
     color:rgba($white, 0.89) !important;
@@ -294,6 +296,7 @@ ul {
         opacity: 0.8;
     }
 }
+
 .primary-gradient-text {
     background: linear-gradient(180deg, #F06500 0%, #F28B03 100%);
     -webkit-background-clip: text;
@@ -301,6 +304,7 @@ ul {
     background-clip: text;
     text-fill-color: transparent;
 }
+
 .grey-btn{
     background-color:$grey-color;
     border-radius: 10px;
@@ -330,6 +334,7 @@ ul {
         opacity: 0.9;
     }
 }
+
 .black-btn{
     background-color: $body-bg-800;
     color: rgba($white, 0.89) !important;
@@ -352,7 +357,15 @@ ul {
         opacity: 0.8;
     }
 }
-
+.success-btn{
+    background-color: $green-color;
+    color:$white !important;
+    &:hover{
+        background-color:$green-color !important;
+        color:rgba($white, 0.89) !important;
+        opacity: 0.8;
+    }
+}
 .cmn_dasdrd_table {
     background:$body-bg;
     border-radius: 30px;
