--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -15,6 +15,10 @@
     .navbar-brand {
         padding-top: 8px;
         padding-bottom: 8px;
+        max-width: 220px;
+        @media #{$max-xxl}{
+            max-width: 200px;
+        }
         @media #{$max-lg}{
             max-width: 150px;
         }
@@ -23,6 +27,8 @@
         }
         @media #{$max-sm}{
             max-width: 110px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
     }   
     
