Made Outside click close functionlity in Sidebar

--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -67,6 +67,7 @@
         transform: translateX(0);
         opacity: 1;
         transition: transform 0.5s;
+        z-index: 1001;
     }
     .sidebar-logo {
         position: relative;
