--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -996,19 +996,12 @@
 }
 .set-block {
     max-width: 100%;
-    height: 260px;
+    height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
-    @media #{$max-xxl}{
-        height: 200px;
-    }
-    @media #{$max-xl}{
-        height: 180px;
-    }
-    @media #{$max-lg}{
-        height: 160px;
-    }
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 // .popmodal-body.no-ht{
 //     min-height: 100%;
@@ -1084,8 +1077,12 @@
     opacity: 0;
 }
 .blackButton {
-    background-color: #0C0F17;
-    color: rgba(255, 255, 255, 0.89) !important;
+    background-color: $body-bg-800 !important;
+    color: rgba($white,0.89) !important;
+    &:hover{
+        background-color: $body-bg-800 !important;
+        color: rgba($white,0.89) !important;
+    }
 }
 
 .orangeButton {
@@ -2026,3 +2023,4 @@ background: $body-bg;
         height: 100px;
     }
 }
+
