--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -131,9 +131,25 @@
     margin-top: 30px;
     padding-bottom: 30px;
     border-bottom: 1px solid $grey-color-800;
+    @media #{$max-lg}{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    @media #{$max-sm}{
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
 }
 .cstm_pagination {
     margin-top: 30px;
+    @media #{$max-lg}{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    @media #{$max-md}{
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
     .row{
         justify-content: space-between;
         div{
@@ -173,21 +189,21 @@
     align-items: center;
      
 }
-.trans_popups .image_area img{
-    // margin: 48px auto 16px;
-    @media #{$max-xxl}{
-        max-width: 140px;
+// .trans_popups .image_area img{
+//     // margin: 48px auto 16px;
+//     @media #{$max-xxl}{
+//         max-width: 140px;
         
-    }
-    @media #{$max-xl}{
-        max-width: 120px;
+//     }
+//     @media #{$max-xl}{
+//         max-width: 120px;
         
-    }
-    @media #{$max-lg}{
-        max-width: 100px;
+//     }
+//     @media #{$max-lg}{
+//         max-width: 100px;
         
-    }
-}
+//     }
+// }
 .mid_text {
     padding: 0 15px;
     h4{
@@ -274,5 +290,55 @@
     margin-top: 32px;
     @media #{$max-lg}{
         margin-top: 16px;
+    }
+}
+.pop-fix .modal-content{
+    height: 580px;
+    @media #{$max-lg}{
+        height: 530px;
+    }
+    
+    @media #{$max-sm}{
+        width: calc(100% - 4px);
+        margin: 0 auto;
+        height: 500px;
+    }
+    .cmn_modal.trans_popups {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .set-block {
+        max-width: 100%;
+        height: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 16px auto;
+        @media #{$max-lg}{
+            height: 100px;
+        }
+        @media #{$max-sm}{
+            max-width: 70px;
+        }
+        img {
+            max-width: 200px;
+            @media #{$max-lg}{
+                max-width: 150px;
+            }
+            @media #{$max-sm}{
+                max-width: 130px;
+            }
+        }
+    }
+    .pop_btns_area{
+        .pop-spiner {
+            width: 20px;
+            height: 20px;
+        }
+        .btn{
+            min-height: 44px;
+        }
     }
 }
