--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -88,7 +88,7 @@
             right: 10px;
             max-width: 24px;
             display: none;
-            @media #{$max-lg}{
+            @media #{$max-xl}{
                 display: block;
             }
         }
