--- a/public/assets/scss/core/how-it-works.scss
+++ b/public/assets/scss/core/how-it-works.scss
@@ -23,6 +23,7 @@
     list-style: disc;
     padding-left: 20px;
 }
-.image-section{
+.image-section.static_img{
     margin-bottom: 15px;
+    position: relative;
 }
