--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -527,6 +527,7 @@ ul {
         background-color:$body-bg;
         border-radius: 40px;
         padding: 32px 20px;
+        overflow: hidden;
         @media #{$max-xxl}{
             padding: 30px 15px;
             border-radius: 30px;
