--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -410,7 +410,7 @@
 .token-listwrap {
     position: relative;
     margin-top: 16px;
-    max-height: 425px;
+    max-height: 250px;
     overflow-y: auto;
     // @media #{$max-xxl}{
     //     max-height: 265px;
@@ -487,10 +487,10 @@
     }
 }
 .tokn-row {
-    // margin-bottom: 16px;
     cursor: pointer;
-    padding: 5px;
     border-radius: 2px;
+    margin-bottom: 12px;
+    padding: 4px;
 }
 
 .tokn-row:hover {
