--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -473,10 +473,11 @@
 }
 .cryoto-box {
     position: absolute;
-    left: auto;
+    left: 4px;
     right: auto;
-    top: auto;
+    top: 50%;
     bottom: auto;
+    transform: translateY(-50%);
     img{
         @media #{$max-xxl}{
             max-width: 42px;
@@ -491,6 +492,7 @@
     border-radius: 2px;
     margin-bottom: 12px;
     padding: 4px;
+    position: relative;
 }
 
 .tokn-row:hover {
