changes updated in faucet

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1112,6 +1112,9 @@
         @media #{$max-sm}{
             height:470px;
         }
+        .token-listwrap {
+            max-height: 250px;
+        }
     }
 }
 .bridge-ht{
