Added Back functionltiy on Send Popup by using HOC in Wallet page

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2096,3 +2096,9 @@ background: $body-bg;
     }
 }
 
+.backArrowBtn {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    right: 5%;
+}
