--- a/public/assets/scss/core/faucet.scss
+++ b/public/assets/scss/core/faucet.scss
@@ -35,7 +35,7 @@
             font-size: 12px;
         }
     }
-    input[type="text"]{
+    input[type="text"], input[type="number"]{
         padding-right: 65px;
     }
 }
@@ -44,7 +44,7 @@
         border: 0;
         background: #0c0f17;
         color:#E9E9EC;
-        padding: 0;
+        padding: 0 4px;
     }
     .arrow-down{
         right: 0;
