--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -49,6 +49,7 @@
     b{
         font-size: 20px;
         color: $white;
+        font-weight: 700;
         @media #{$max-lg}{
             font-size: 14px;
         }
