--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -22,6 +22,8 @@ $lt-green:#daf5c9;
 $lt-blue:#dce5fd;
 $ltdrk-orange:#f9d2bc;
 $lt-purple-50:#ecd5fd;
+$black:#000;
+
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
