--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -33,9 +33,9 @@
     margin-top: 15px;
 }
 .section-info {
-    padding: 0px 20px 30px;
+    padding: 30px;
     @media #{$max-lg}{
-        padding: 0px 0 30px;
+        padding: 30px;
     }
 }
 .btns-sec {
