--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1178,6 +1178,21 @@
         padding-top: 50px;
     }
 }
+.black-btn.btn-active {
+    background: $primary;
+}
+.tab-btns {
+    .black-btn.btn-active{
+        &:hover{
+            background: $primary !important;
+        }
+    }
+    .black-btn{
+        &:hover{
+            background: transparent !important;
+        }
+    }
+}
 /** become a validator steps style start **/
 .rewards-section {
     padding: 70px 0;
