--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2105,6 +2105,7 @@ background: $body-bg;
     justify-content: space-between;
     height: 100%;
 }
+
 .elip-text{
     white-space: nowrap;
     overflow: hidden;
@@ -2127,4 +2128,7 @@ background: $body-bg;
         padding:30px;
         border: 1px solid $white;
     }
+}
+.captcha-wrap > div > div > div {
+    margin: 0 auto;
 }
