--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2132,3 +2132,7 @@ background: $body-bg;
 .captcha-wrap > div > div > div {
     margin: 0 auto;
 }
+.transac-data{
+    height: 270px;
+    margin-top: 30px;
+}
