--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -23,7 +23,7 @@ $lt-blue:#dce5fd;
 $ltdrk-orange:#f9d2bc;
 $lt-purple-50:#ecd5fd;
 $black:#000;
-
+$red:#ff3030;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
