--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -960,6 +960,9 @@
         font-weight: 600;
         color: $grey-color-800;
     }
+    .red-txt{
+        color:$red;
+    }
 }
 .sep-space {
     padding-top: 25px;
