--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -32,8 +32,12 @@
 }
 .left-box{
     flex: 0 0 600px;
+    @media #{$max-xxl}{
+        min-height: 530px;
+    }
     @media #{$max-xl}{
         flex: 0 0 500px;
+        min-height: auto;
     }
     @media only screen and (min-width: 1199px) and (max-width: 1300px){
         flex: 0 0 460px;
