--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -104,6 +104,7 @@
 // common space closed
 
 // form scss start
+
 .form-field{
     &.dark-input{
         background-color: $body-bg-800;
@@ -2257,5 +2258,10 @@ background: $body-bg;
         background-color: $primary;
         border-color: $primary;
     }
+    }
+}
+.max-group{
+    &.form-field{
+        background-color:$body-bg-800;
     }
 }
