--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -296,3 +296,36 @@
     }
 }
 /** Bone staking end **/
+
+.info-box{
+    border: 1px solid $primary;
+    padding: 15px;
+    border-radius: 3px;
+    background: $black;
+    @media #{$max-xsm} {
+        padding: 10px;
+    }
+}
+.shib-popup{
+    .user-icon{
+        width: 60px;
+        height: 60px;
+        position: relative;
+        @media #{$max-xsm} {
+            width: 50px;
+            height: 50px;
+        }
+        &::before{
+            width: 35px;
+            height: 35px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            @media #{$max-xsm} {
+                width: 24px;
+                height: 24px;
+            }
+        }
+    }
+}
