--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -37,6 +37,9 @@
     @media #{$max-lg}{
         padding: 30px;
     }
+    @media #{$max-sm}{
+        padding: 30px 0;
+    }
 }
 .btns-sec {
     display: flex;
@@ -289,7 +292,7 @@
 }
 .lft-txt{
     @media #{$max-md}{
-        padding: 40px 0 0;
+        padding: 10px 0 0;
         text-align: center;
     }
     .btns-wrap{
