images and anchor tag changes

--- a/public/assets/scss/pages/validator.scss
+++ b/public/assets/scss/pages/validator.scss
@@ -100,3 +100,12 @@
     display: flex;
     justify-content: space-between;
 }
+.vali_deli_popups { 
+    .image_area{
+        display: flex;
+        justify-content: center;
+    }
+    .redu_img{
+        width: 130px;
+    }
+}
