--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1072,13 +1072,15 @@
 }
 
 .visVisible {
-    visibility: visible;
-    opacity: 1;
+    // visibility: visible;
+    // opacity: 1;
+    display: block;
 }
 
 .visInvisible {
-    visibility: hidden;
-    opacity: 0;
+    // visibility: hidden;
+    // opacity: 0;
+    display:none;
 }
 .blackButton {
     background-color: $body-bg-800 !important;
