--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -193,6 +193,15 @@
                 }
                
             }
+            .dropdown-item:last-child{
+                margin-bottom: 0;
+                padding-bottom: 0;
+                border:0
+            }
+            .dropdown-item:first-child{
+                margin-top: 0;
+                padding-top: 0;
+            }
             .h6 {
                 font-size: 16px;
                 font-weight: 600;
