--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2408,3 +2408,10 @@ background: $body-bg;
     text-align: center;
     background-color: rgba(0,0,0,0.8);
 }
+
+.cus-shimer{
+    .shimmer{
+        background: linear-gradient(to right, #f6f6f6 -62%, #f0f0f0 -42%, #596380 60%);
+        animation: shimmer 5s linear infinite forwards;
+    }
+}
