improved font family

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2416,7 +2416,7 @@ background: $body-bg;
     }
 }
 .font-up{
-    .pagination, .text-white{
+    .pagination, .text-white, .table{
         font-family: "MADE Okine Sans PERSONAL USE" !important;
     }
-}
+} 
