--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2320,6 +2320,7 @@ background: $body-bg;
     }
 }
 .del-pop{
+    font-family: "MADE Okine Sans PERSONAL USE" !important; 
     .modal-content{
         height: 605px;
         @media #{$max-xl} {
